--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/runtime": "^7.9.2",
     "babel-plugin-styled-components": "^1.10.7",
+    "formik": "^2.1.4",
     "gatsby": "^2.19.45",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.44",
