--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-with-direction": "^1.3.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "yup": "^0.28.4"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
