--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-manifest": "^2.2.48",
-    "gatsby-plugin-netlify-cms": "^4.1.43",
+    "gatsby-plugin-netlify": "^2.3.2",
+    "gatsby-plugin-netlify-cms": "^4.3.0",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-postcss": "^2.1.22",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.24",
-    "gatsby-plugin-sharp": "^2.4.13",
+    "gatsby-plugin-sharp": "^2.6.1",
     "gatsby-plugin-styled-components": "^3.2.3",
+    "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-images": "^3.3.1",
+    "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.1.56",
+    "gatsby-transformer-remark": "^2.8.6",
     "gatsby-transformer-sharp": "^2.3.19",
+    "lodash": "^4.17.15",
+    "lodash-webpack-plugin": "^0.11.5",
     "moment": "^2.24.0",
-    "netlify-cms-app": "^2.11.29",
+    "netlify-cms-app": "^2.12.12",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dates": "^21.8.0",
