--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,12 +20,11 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Especialidad", name: "specialty", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Description", name: "description", widget: "text"}
-      - {label: "Featured Post", name: "featuredpost", widget: "boolean"}
-      - {label: "Featured Image", name: "featuredimage", widget: image}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Especialidad", name: "specialty", widget: "string"}   
+      - {label: "Presentación", name: "body", widget: "markdown"}  
+      - {label: "Foto", name: "featuredimage", widget: image}
+      - {label: "Descripción", name: "description", widget: "text"}
       - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Fecha de publicación", name: "date", widget: "datetime"}
 
   
