--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,9 +21,9 @@ collections:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Especialidad", name: "specialty", widget: "string"}   
-      - {label: "Presentación", name: "body", widget: "markdown"}  
-      - {label: "Foto", name: "featuredimage", widget: image}
       - {label: "Descripción", name: "description", widget: "text"}
+      - {label: "Foto", name: "featuredimage", widget: image}
+      - {label: "Detalle", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Fecha de publicación", name: "date", widget: "datetime"}
 
