--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
     fields:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Especialidad", name: "specialty", widget: "string"}   
+      - {label: 'Especialidad', name: 'specialty', widget: 'select', options: ['Published', 'Featured', 'Draft'], default: 'Published'}  
       - {label: "Descripción", name: "description", widget: "text"}
       - {label: "Foto", name: "featuredimage", widget: image}
       - {label: "Detalle", name: "body", widget: "markdown"}
