--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,7 +27,7 @@ collections:
       - {label: "Tags", name: "tags", widget: "list"}
       - label: 'Categories'
         name: 'categories'
-        widget: 'list'
+        widget: 'string'
         required: false
         fields:
           - label: 'Category'
