--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,16 +25,8 @@ collections:
       - {label: "Foto", name: "featuredimage", widget: image}
       - {label: "Detalle", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
-
-          - {label: 'Categories',
-            name: 'categories',
-            widget: 'relation',
-            collection: 'services',
-            searchFields: ['title'],
-            valueField: 'title',
-            multiple: true}
+      - {label: 'Categories', name: 'categories', widget: 'relation', collection: 'services', searchFields: ['title'], valueField: 'title', multiple: true}
       - {label: "Fecha de publicación", name: "date", widget: "datetime"}
-
   - name: "services"
     label: "Service"
     folder: "src/pages/services"
