--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@babel/runtime": "^7.9.2",
     "babel-plugin-styled-components": "^1.10.7",
     "formik": "^2.1.4",
-    "gatsby": "^2.19.45",
+    "gatsby": "^2.21.33",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-netlify": "^2.3.2",
@@ -47,7 +47,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
