--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^2.21.33",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.44",
+    "gatsby-plugin-modal-routing": "^1.1.0",
     "gatsby-plugin-netlify": "^2.3.2",
     "gatsby-plugin-netlify-cms": "^4.3.0",
     "gatsby-plugin-offline": "^3.0.41",
@@ -25,7 +26,7 @@
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-transformer-remark": "^2.8.6",
     "gatsby-transformer-sharp": "^2.3.19",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "lodash-webpack-plugin": "^0.11.5",
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.12.12",
