--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dates": "^21.8.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.10.0",
     "react-with-direction": "^1.3.1",
     "styled-components": "^5.1.0",
     "yup": "^0.28.4"
