--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.6.1",
     "gatsby-plugin-styled-components": "^3.2.3",
+    "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-remark-copy-linked-files": "^2.3.2",
     "gatsby-remark-images": "^3.3.1",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-transformer-remark": "^2.8.6",
     "gatsby-transformer-sharp": "^2.3.19",
+    "gsap": "^3.5.0",
     "lodash": "^4.17.19",
     "lodash-webpack-plugin": "^0.11.5",
     "moment": "^2.24.0",
