--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@babel/runtime": "^7.9.2",
     "babel-plugin-styled-components": "^1.10.7",
     "formik": "^2.1.4",
-    "gatsby": "^2.21.33",
+    "gatsby": "^2.24.85",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-modal-routing": "^1.2.0",
@@ -18,7 +18,7 @@
     "gatsby-plugin-postcss": "^2.1.22",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.24",
-    "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-styled-components": "^3.2.3",
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-remark-copy-linked-files": "^2.3.2",
@@ -39,6 +39,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.10.0",
     "react-with-direction": "^1.3.1",
+    "sharp": "^0.26.2",
     "styled-components": "^5.1.0",
     "yup": "^0.28.4"
   },
