--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "babel-plugin-styled-components": "^1.11.1",
+    "@tailwindcss/ui": "^0.7.2",
     "formik": "^2.2.5",
     "gatsby": "^2.26.1",
     "gatsby-background-image": "^0.10.2",
@@ -16,31 +16,25 @@
     "gatsby-plugin-netlify-cms": "^4.4.0",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
-    "gatsby-plugin-styled-components": "^3.4.0",
-    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-copy-linked-files": "^2.4.0",
     "gatsby-remark-images": "^3.5.1",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-remark": "^2.10.0",
     "gatsby-transformer-sharp": "^2.6.0",
-    "gsap": "^3.5.1",
     "lodash": "^4.17.20",
     "lodash-webpack-plugin": "^0.11.5",
-    "moment": "^2.29.1",
     "netlify-cms-app": "^2.13.3",
+    "postcss": "^8.1.7",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-dates": "^21.8.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
     "react-with-direction": "^1.3.1",
     "sharp": "^0.26.2",
-    "styled-components": "^5.2.1",
     "yup": "^0.28.5"
   },
   "devDependencies": {
