--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "@tailwindcss/ui": "^0.7.2",
+    "autoprefixer": "^10.0.2",
     "formik": "^2.2.5",
     "gatsby": "^2.26.1",
     "gatsby-background-image": "^0.10.2",
@@ -15,7 +19,7 @@
     "gatsby-plugin-netlify": "^2.5.0",
     "gatsby-plugin-netlify-cms": "^4.4.0",
     "gatsby-plugin-offline": "^3.4.0",
-    "gatsby-plugin-postcss": "^2.3.13",
+    "gatsby-plugin-postcss": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-remark-copy-linked-files": "^2.4.0",
@@ -27,7 +31,7 @@
     "lodash": "^4.17.20",
     "lodash-webpack-plugin": "^0.11.5",
     "netlify-cms-app": "^2.13.3",
-    "postcss": "^8.1.7",
+    "postcss": "^8.1.9",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -35,11 +39,11 @@
     "react-icons": "^3.11.0",
     "react-with-direction": "^1.3.1",
     "sharp": "^0.26.2",
+    "tailwindcss": "^2.0.1",
     "yup": "^0.28.5"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "tailwindcss": "^1.9.6"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
